add tmbSignature api
